--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Node Social</title>
-		<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<!--<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
-		<link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/navigation.css">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 
-		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="../bower_components/angular/angular.min.js"></script>
-		<script src="../bower_components/angular-route/angular-route.min.js"></script>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="bower_components/angular/angular.min.js"></script>
+		<script src="bower_components/angular-route/angular-route.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/routes.js"></script>
 		
@@ -31,21 +31,21 @@
 		 <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		      	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 		        <span class="sr-only">Toggle navigation</span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="/"><img alt="{{ navTitle }}" src="img/nsLogoTest.png" id="logo"></a>
+		      <a href="/"><img alt="{{navTitle}}" src="img/nsLogoTest.png" id="logo"></a>
 		    </div>
 		
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 			    <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
-		        <li><a href="/about">About</a></li>
-		        <li><a href="/contact">Contact</a></li>
+		        <li><a ng-class="{isActive('/about')}" href="/about">About</a></li>
+		        <li><a ng-class="{isActive('/contact')}" href="/contact">Contact</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
