--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Node Social</title>
+		<!-- stylesheets -->
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<!--<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
 		<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/navigation.css">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 
+		<!-- bower components -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/angular/angular.min.js"></script>
 		<script src="bower_components/angular-route/angular-route.min.js"></script>
+
+		<!-- main app and routes -->
 		<script src="js/app.js"></script>
 		<script src="js/routes.js"></script>
 		
@@ -23,7 +27,14 @@
 		<script src="js/controllers/homeCtrl.js"></script>
 		<script src="js/controllers/aboutCtrl.js"></script>
 		
+		<!-- for angular routes -->
 		<base href="/">
+
+		<!-- socket.io -->
+		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+		<script type="text/javascript">
+			var socket = io();
+		</script>
 
 	</head>
 	<body>
@@ -70,8 +81,8 @@
 		      </form>
 -->
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Login</a></li>
-		        <li><a href="#">Sign-up</a></li>
+		        <li><a href="/login">Login</a></li>
+		        <li><a href="/signup">Sign-up</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
