--- a/pages/login.html
+++ b/pages/login.html
@@ -1,12 +1,19 @@
 <br/>
 <br/>
-
+<br>
 <div class="container">
-	<h1>Login</h1>
+	<h1>Hello!</h1>
+	<h3>Please Login Below</h3>
 	<form>
 		<div class="form-group">
-			<label for="emailLogin">Enter your login email</label>
-			<input type="email" class="form-control" id="emailLogin" placeholder="Your Email">
+			<label for="loginemail">Enter your login email</label>
+			<input type="email" class="form-control" id="loginemail" placeholder="Your Email">
 		</div>
+		<div class="form-group">
+			<label for="loginpass">Enter your password</label>
+			<input type="password" class="form-control" id="loginpass" placeholder="Password">
+		</div>
+
+		<button type="submit" class="btn btn-lg btn-success">Login</button>
 	</form>
 </div>
