--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/navigation.css">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
+		<link rel="stylesheet" type="text/css" href="css/controlPanel.css">
 
 		<!-- bower components -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -20,13 +21,16 @@
 		<!-- main app and routes -->
 		<script src="js/app.js"></script>
 		<script src="js/routes.js"></script>
-		
+
 		<!-- controllers -->
 		<script src="js/controllers/navigationCtrl.js"></script>
 		<script src="js/controllers/BareBones_0.0.1.js"></script>
 		<script src="js/controllers/homeCtrl.js"></script>
 		<script src="js/controllers/aboutCtrl.js"></script>
-		
+		<script src="js/controllers/controlPanelCtrl.js"></script>
+		<script src="js/controllers/loginCtrl.js"></script>
+		<script src="js/controllers/signupCtrl.js"></script>
+
 		<!-- for angular routes -->
 		<base href="/">
 
@@ -35,6 +39,7 @@
 		<script type="text/javascript">
 			var socket = io();
 		</script>
+		<script type="text/javascript" src="js/essentials.js"></script>
 
 	</head>
 	<body>
@@ -50,13 +55,13 @@
 		      </button>
 		      <a href="/"><img alt="{{navTitle}}" src="img/nsLogoTest.png" id="logo"></a>
 		    </div>
-		
+
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 			    <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
-		        <li><a ng-class="{isActive('/about')}" href="/about">About</a></li>
-		        <li><a ng-class="{isActive('/contact')}" href="/contact">Contact</a></li>
+		        <li><a href="/about">About</a></li>
+		        <li><a href="/contact">Contact</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -81,8 +86,8 @@
 		      </form>
 -->
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="/login">Login</a></li>
-		        <li><a href="/signup">Sign-up</a></li>
+		        <li><a href="#" ng-click="loginOrLogout()"><i class="fa fa-power-off"></i> {{ loginState }}</a></li>
+		        <li ng-show="signUp"><a href="/signup"><i class="fa fa-book"></i> Sign-up</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -99,10 +104,9 @@
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-				
+
 		<div ng-view></div>
-		
-		
+
 	<div class="container">
 		<hr>
 		<footer>
