--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 		<!-- main app and routes -->
 		<script src="js/app.js"></script>
 		<script src="js/routes.js"></script>
-		
+
 		<!-- controllers -->
 		<script src="js/controllers/navigationCtrl.js"></script>
 		<script src="js/controllers/BareBones_0.0.1.js"></script>
 		<script src="js/controllers/homeCtrl.js"></script>
 		<script src="js/controllers/aboutCtrl.js"></script>
-		
+		<script src="js/controllers/controlPanelCtrl.js"></script>
+		<script src="js/controllers/loginCtrl.js"></script>
+
 		<!-- for angular routes -->
 		<base href="/">
 
@@ -35,6 +37,7 @@
 		<script type="text/javascript">
 			var socket = io();
 		</script>
+		<script type="text/javascript" src="js/essentials.js"></script>
 
 	</head>
 	<body>
@@ -50,13 +53,13 @@
 		      </button>
 		      <a href="/"><img alt="{{navTitle}}" src="img/nsLogoTest.png" id="logo"></a>
 		    </div>
-		
+
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 			    <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
-		        <li><a ng-class="{isActive('/about')}" href="/about">About</a></li>
-		        <li><a ng-class="{isActive('/contact')}" href="/contact">Contact</a></li>
+		        <li><a href="/about">About</a></li>
+		        <li><a href="/contact">Contact</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -99,13 +102,13 @@
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-				
+
 		<div ng-view></div>
-		
-		
+
 	<div class="container">
 		<hr>
 		<footer>
+			<a href="#" onclick="killToken()">Log-out</a>
 			<p>© Company 2015</p>
 		</footer>
 	</div>
