--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 		      </form>
 -->
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="/login">Login</a></li>
-		        <li><a href="/signup">Sign-up</a></li>
+		        <li><a href="#" ng-click="loginOrLogout()"><i class="fa fa-power-off"></i> {{ loginState }}</a></li>
+		        <li ng-show="signUp"><a href="/signup"><i class="fa fa-book"></i> Sign-up</a></li>
 <!--
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -108,7 +108,6 @@
 	<div class="container">
 		<hr>
 		<footer>
-			<a href="#" onclick="killToken()">Log-out</a>
 			<p>© Company 2015</p>
 		</footer>
 	</div>
