Add registration to UI

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script src="js/controllers/aboutCtrl.js"></script>
 		<script src="js/controllers/controlPanelCtrl.js"></script>
 		<script src="js/controllers/loginCtrl.js"></script>
+		<script src="js/controllers/signupCtrl.js"></script>
 
 		<!-- for angular routes -->
 		<base href="/">
