--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,29 +4,36 @@
 <div class="container">
 	<h1>Welcome to Node Social!</h1>
 	<h3>Please Sign-up Below</h3>
-	<form>
+	<form ng-submit="register()">
 		<div class="form-group">
 			<label for="firstName">Enter your first name</label>
-			<input type="email" class="form-control" id="firstName" placeholder="First Name">
+			<input type="text" class="form-control" id="firstName" placeholder="First Name" required ng-model="fName">
 		</div>
 		<div class="form-group">
 			<label for="lastName">Enter your last name</label>
-			<input type="email" class="form-control" id="lastName" placeholder="Last Name">
+			<input type="text" class="form-control" id="lastName" placeholder="Last Name" required ng-model="lName">
 		</div>
 		<div class="form-group">
 			<label for="signupemail">Enter your login email</label>
-			<input type="email" class="form-control" id="signupemail" placeholder="Your Email">
+			<input type="email" class="form-control" id="signupemail" placeholder="Your Email" required ng-model="email">
 		</div>
 		<div class="form-group">
 			<label for="signuppass_1">Enter your password</label>
-			<input type="password" class="form-control" id="signuppass_1" placeholder="Password">
+			<input type="password" class="form-control" id="signuppass_1" placeholder="Password" required ng-model="password">
 		</div>
 		<div class="checkbox">
 			<label>
-				<input type="checkbox"> I agree to <a href="#">Node Social Terms</a>
+				<input type="checkbox" ng-model="checkToAgree"> I agree to <a href="#">Node Social Terms</a>
 			</label>
 		</div>
 
 		<button type="submit" class="btn btn-lg btn-success">Sign-up</button>
+
+		<div ng-show="successSignUp" class="alert alert-success" role="alert">
+            <b>{{ successSignUp }}</b>
+        </div>
+        <div ng-show="errorMsg" class="alert alert-danger" role="alert">
+            {{ errorMsg }}
+        </div>
 	</form>
 </div>
