Add control panel skeleton.

--- a/pages/controlPanel.html
+++ b/pages/controlPanel.html
@@ -3,9 +3,77 @@
 <br/>
 <br/>
 <div class="container">
-    <div class="well">
+    <!-- <div class="well">
         Keep items in hereasdfsa
         {{ authContent }}
+    </div> -->
+    <div class="feed">
+        <input type="text" class="form-control searchInput" placeholder="Search"/><button type="submit" class="btn btn-md btn-success searchBtn">Search</button>
+        <br/>
+        <br/>
+        <h4>Feed:</h4>
+
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64" src="img/64square.svg" data-holder-rendered="true" style="width: 64px; height: 64px;">
+                </a>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">Top aligned media</h4>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            </div>
+        </div>
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64" src="img/64square.svg" data-holder-rendered="true" style="width: 64px; height: 64px;">
+                </a>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">Top aligned media</h4>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            </div>
+        </div>
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64" src="img/64square.svg" data-holder-rendered="true" style="width: 64px; height: 64px;">
+                </a>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">Top aligned media</h4>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            </div>
+        </div>
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64" src="img/64square.svg" data-holder-rendered="true" style="width: 64px; height: 64px;">
+                </a>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">Top aligned media</h4>
+                <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            </div>
+        </div>
     </div>
 
+    <div class= "leftImagePanel">
+        <h3>Welcome: FirstName</h3>
+        <p><img class="img-circle" src="img/defaultPic.jpg" alt="Generic placeholder image" width="140" height="140"></p>
+        <a class="btn btn-success midButton" href="#" role="button">View details »</a>
+        <a class="btn btn-success midButton" href="#" role="button">View details »</a>
+    </div>
+
+    <div class="leftQuickLinksPanel">
+        <ul class="list-group">
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+            <li class="list-group-item"><a href="#">Some Link</a></li>
+        </ul>
+    </div>
 </div>
