--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,7 @@
 <br/>
 <br>
 <div class="container" ng-controller="loginCtrl">
-	<h1>Hello!</h1>
+	<h1>Login</h1>
 	<h3>Please Login Below</h3>
 	<form ng-submit="submit()">
 		<div class="form-group">
