--- a/pages/signup.html
+++ b/pages/signup.html
@@ -2,7 +2,7 @@
 <br/>
 <br>
 <div class="container">
-	<h1>Welcome to Node Social!</h1>
+	<h1>Sign Up</h1>
 	<h3>Please Sign-up Below</h3>
 	<form ng-submit="register()">
 		<div class="form-group">
