--- a/pages/controlPanel.html
+++ b/pages/controlPanel.html
@@ -13,11 +13,7 @@
         <div class="followBtns">
             <button type="submit" class="btn btn-xs btn-warning searchBtn">Following <b>0</b></button>
             <button type="submit" class="btn btn-xs btn-warning searchBtn">Followers <b>0</b></button>
-<<<<<<< HEAD
         </div>
-=======
-        </div>  
->>>>>>> 55182c4d4026cf58972be6365638c65d55f96b17
         <br/>
         <div ng-include="contentTab"></div>
     </div>
@@ -26,7 +22,7 @@
         <h3>Welcome: FirstName</h3>
         <p><img class="img-circle" src="img/defaultPic.jpg" alt="Generic placeholder image" width="140" height="140"></p>
         <a class="btn btn-success midButton" href="#" data-toggle="modal" data-target="#changePicture">Change Picture</a>
-        <a class="btn btn-success midButton" href="#" role="button">Update Settings</a>
+        <a class="btn btn-success midButton" href="#" data-toggle="modal" data-target="#updateSettings">Update Settings</a>
     </div>
 
     <div class="leftQuickLinksPanel list-group">
@@ -43,7 +39,29 @@
         <div class="modal-content">
             <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Change your profile picture</h4>
+            <h4 class="modal-title" id="myModalLabel">Change Picture</h4>
+            </div>
+        <div class="modal-body">
+            <form method="post" action="api/uploadPhoto" enctype="multipart/form-data">
+              <input type="file" name="myFile" accept="image/*" />
+              <button type="button" class="btn btn-default">Upload</button>
+            </form>
+        </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Update Settings -->
+<div class="modal fade" id="updateSettings" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Update Your Settings</h4>
             </div>
         <div class="modal-body">
         ...
