--- a/pages/signup.html
+++ b/pages/signup.html
@@ -14,6 +14,13 @@
 			<input type="text" class="form-control" id="lastName" placeholder="Last Name" required ng-model="lName">
 		</div>
 		<div class="form-group">
+			<label for="gender">Gender</label>
+			<select class="form-control" id="gender" required ng-model="gender">
+				<option>Male</option>
+				<option>Female</option>
+			</select>
+		</div>
+		<div class="form-group">
 			<label for="signupemail">Enter your login email</label>
 			<input type="email" class="form-control" id="signupemail" placeholder="Your Email" required ng-model="email">
 		</div>
