--- a/pages/controlPanel.html
+++ b/pages/controlPanel.html
@@ -42,15 +42,15 @@
             <h4 class="modal-title" id="myModalLabel">Change Picture</h4>
             </div>
         <div class="modal-body">
-            <form method="post" action="api/uploadPhoto" enctype="multipart/form-data">
+            <form method="post" action="{{getPhotoPath()}}" enctype="multipart/form-data">
               <input type="file" name="myFile" accept="image/*" />
-              <button type="button" class="btn btn-default">Upload</button>
+              <button class="btn btn-default">Upload</button>
             </form>
         </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
         </div>
     </div>
 </div>
